# rembg-clean

./: README.md  inspect_save.scm  pyproject.toml
rembg_clean/: cli.py
